--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>No Sidebar - Strongly Typed by HTML5 UP</title>
+		<title>About me - Chocolate</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -31,35 +31,20 @@
 					
 					<!-- Logo -->
 						<h1 id="logo"><a href="index.html">Strongly Typed</a></h1>
-						<p>A responsive HTML5 site template. Manufactured by HTML5 UP.</p>
+						<p>Sorry for spelling mistakes.</p>
 					
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a class="icon fa-home" href="index.html"><span>Introduction</span></a></li>
+								<li><a class="icon fa-home" href="index.html"><span>Home Page</span></a></li>
 								<li>
-									<a href="" class="icon fa-bar-chart-o"><span>Dropdown</span></a>
-									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-										<li>
-											<a href="">Phasellus consequat</a>
-											<ul>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-												<li><a href="#">Phasellus consequat</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
-									</ul>
+									<a href="games.html" class="icon fa-bar-chart-o"><span>Games</span></a>
 								</li>
-								<li><a class="icon fa-cog" href="left-sidebar.html"><span>Left Sidebar</span></a></li>
-								<li><a class="icon fa-retweet" href="right-sidebar.html"><span>Right Sidebar</span></a></li>
-								<li><a class="icon fa-sitemap" href="no-sidebar.html"><span>No Sidebar</span></a></li>
+								<li><a class="icon fa-cog" href="drawings.html"><span>Drawings</span></a></li>
+								<li><a class="icon fa-retweet" href="aboutme.html"><span>About me</span></a></li>
+								<li><a class="icon fa-sitemap" href="contact.html"><span>Contact page</span></a></li>
 							</ul>
 						</nav>
-
 				</div>
 			</div>
 			
@@ -75,52 +60,10 @@
 									with no sidebar at all!</h2>
 								</header>
 								<span class="image featured"><img src="images/pic04.jpg" alt="" /></span>
-								<h3>And yeah, that's basically it</h3>
-								<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit 
-								ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris 
-								sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada 
-								in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat 
-								magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros 
-								consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id 
-								justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet 
-								mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. 
-								Curabitur leo nibh, rutrum eu malesuada in, tristique at erat.</p>
-								<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat 
-								Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit ligula 
-								vel quam viverra sit amet mollis tortor congue. Sed quis mauris sit amet 
-								magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada in, 
-								tristique at erat. Curabitur leo nibh, rutrum eu malesuada  in, tristique 
-								at erat lorem ipsum dolor sit amet lorem ipsum sed consequat magna 
-								tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros consequat 
-								magna tempus</p>
-								<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit 
-								ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris 
-								sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada 
-								in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat 
-								consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id 
-								in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat 
-								magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros 
-								consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id 
-								justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet 
-								mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. 
-								Curabitur leo nibh, rutrum eu malesuada in, tristique at erat.</p>
-								<h3>Accumsan lorem ipsum veroeros</h3>
-								<p>Consequat Phasellus laoreet massa id in, tristique at erat lorem 
-								ipsum dolor sit amet lorem ipsum sed consequat magna tempus veroeros 
-								consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id 
-								justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet 
-								mollis tortor congue. Sed quis mauris sit amet magna.</p>
-								<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit 
-								ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris 
-								sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada 
-								in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat 
-								consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id 
-								in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat 
-								magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros 
-								consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id 
-								justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet 
-								mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. 
-								Curabitur leo nibh, rutrum eu malesuada in, tristique at erat.</p>
+								<h3>About me</h3>
+								<p>My name is Gigi Wong and I am 13 years old. I am chinese, but I don't eat dogs.Honestly I don't get why most people think that all chinese eat dogs i know that some of them do, but not all chinese do. By the way i live in Hong Kong. When I grow up, I want to be a unicorn...JK, no I just want to be a human...a normal human. I made this website because I want to.</p>
+								<h3>What I like</h3>
+								<p>I <strong>love </strong>to eat chocolate and bacons. Everyone likes chocolate and bacon, if you don't, you <strong>SUCK</strong>! JK, you don't, everyone have different opinion.</p>
 								<h3>Ligula suspcipit fusce veroeros</h3>
 								<p>Nullam dolore etiam sed massa id in, tristique at erat lorem 
 								ipsum dolor sit amet lorem ipsum sed consequat magna tempus veroeros 
