--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strongly Typed by HTML5 UP</title>
+		<title>Chocolate</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -36,20 +36,15 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a class="icon fa-home" href="index.html"><span>Introduction</span></a></li>
+								<li><a class="icon fa-home" href="index.html"><span>Home Page</span></a></li>
 								<li>
-									<a href="" class="icon fa-bar-chart-o"><span>Games</span></a>
-									<ul>
-										<li><a href="#">Hetalia Jump</a></li>
-										<li><a href="#">Colour Blast</a></li>
-									</ul>
+									<a href="games.html" class="icon fa-bar-chart-o"><span>Games</span></a>
 								</li>
-								<li><a class="icon fa-cog" href="left-sidebar.html"><span>Drawings</span></a></li>
-								<li><a class="icon fa-retweet" href="right-sidebar.html"><span>About me</span></a></li>
-								<li><a class="icon fa-sitemap" href="no-sidebar.html"><span>Conact page</span></a></li>
+								<li><a class="icon fa-cog" href="drawings.html"><span>Drawings</span></a></li>
+								<li><a class="icon fa-retweet" href="aboutme.html"><span>About me</span></a></li>
+								<li><a class="icon fa-sitemap" href="contact.html"><span>Contact page</span></a></li>
 							</ul>
 						</nav>
-
 				</div>
 			</div>
 			
