--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 							<!-- Feature -->
 								<section>
-									<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="aboutme.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 									<header>
 										<h3>About me</h3>
 									</header>
@@ -83,7 +83,7 @@
 
 							<!-- Feature -->
 								<section>
-									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="conatct.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 									<header>
 										<h3>Contact</h3>
 									</header>
