--- a/aboutme.html
+++ b/aboutme.html
@@ -63,7 +63,7 @@
 								<h3>About me</h3>
 								<p>My name is Gigi Wong and I am 13 years old. I am chinese, but I don't eat dogs.Honestly I don't get why most people think that all chinese eat dogs i know that some of them do, but not all chinese do. By the way i live in Hong Kong. When I grow up, I want to be a unicorn...JK, no I just want to be a human...a normal human. I made this website because I want to.</p>
 								<h3>What I like</h3>
-								<p>I <strong>love </strong>to eat chocolate and bacons. Everyone likes chocolate and bacon, if you don't, you <strong>SUCK</strong>! JK, you don't, everyone have different opinion.</p>
+								<p>I <strong>love </strong>to eat chocolate and bacons. Actually everyone likes chocolate and bacon, if you don't, you <strong>SUCK</strong>! JK, you don't, everyone have different opinion. My favorite artist is Taylor Swift. However my favorite song is not by Taylor Swift, it's Centuries by Fall Out Boys. </p>
 								<h3>Ligula suspcipit fusce veroeros</h3>
 								<p>Nullam dolore etiam sed massa id in, tristique at erat lorem 
 								ipsum dolor sit amet lorem ipsum sed consequat magna tempus veroeros 
