--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 					<!-- Logo -->
 						<h1 id="logo"><a href="index.html">Gigi Wong</a></h1>
 						<p>Chocolate is love. Chocolate is life. Remember this and you shall have a happy life.</p>
-					
+						<audio autoplay="autoplay" controls="controls">  
+						   <!-- <source src="music.ogg" />   -->
+						   <source src="music.mp3" />  
+						</audio> 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
