--- a/aboutme.html
+++ b/aboutme.html
@@ -30,8 +30,8 @@
 				<div id="header" class="container">
 					
 					<!-- Logo -->
-						<h1 id="logo"><a href="index.html">Strongly Typed</a></h1>
-						<p>Sorry for spelling mistakes.</p>
+						<h1 id="logo"><a href="index.html">Gigi Wong</a></h1>
+						<p>Chocolate is love. Chocolate is life. Remember this and you shall have a happy life.</p>
 					
 					<!-- Nav -->
 						<nav id="nav">
