--- a/drawings.html
+++ b/drawings.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Right Sidebar - Strongly Typed by HTML5 UP</title>
+		<title>Drawings - Chocolate</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -29,9 +29,9 @@
 			<div id="header-wrapper">
 				<div id="header" class="container">
 					
-					<!-- Logo -->
-						<h1 id="logo"><a href="index.html">Strongly Typed</a></h1>
-						<p>A responsive HTML5 site template. Manufactured by HTML5 UP.</p>
+						<!-- Logo -->
+						<h1 id="logo"><a href="index.html">Gigi Wong</a></h1>
+						<p>Chocolate is love. Chocolate is life. Remember this and you shall have a happy life.</p>
 					
 					<!-- Nav -->
 						<nav id="nav">
