--- a/index.html
+++ b/index.html
@@ -32,10 +32,6 @@
 					<!-- Logo -->
 						<h1 id="logo"><a href="index.html">Gigi Wong</a></h1>
 						<p>Chocolate is love. Chocolate is life. Remember this and you shall have a happy life.</p>
-						<audio autoplay="autoplay" controls="controls">  
-						   <!-- <source src="music.ogg" />   -->
-						   <source src="music.mp3" />  
-						</audio> 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
@@ -86,7 +82,7 @@
 
 							<!-- Feature -->
 								<section>
-									<a href="conatct.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="conatct.html" class="image featured"><img src="images/contact.png" alt="" /></a>
 									<header>
 										<h3>Contact</h3>
 									</header>
@@ -271,7 +267,6 @@
 					</div>
 				</div>
 			</div>
-
 		<!-- Footer -->
 			<div id="footer-wrapper">
 				<div id="footer" class="container">
