--- a/games.html
+++ b/games.html
@@ -62,10 +62,13 @@
 											<h2>Hetalia Jump</h2>
 										</header>
 										<a href="html5-doodle-jump/index.html" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+										<h4>Friday, 19 December,2014</h4>
 										<h2>Colour Blast</h2>
 										<a href="colorblast/index.html" class="image featured"><img src="images/colorblastpic.jpg" alt="" /></a>
+										<h4>Friday, 19 December,2014</h4>
 										<h2>Hangman</h2>
 										<a href="word-guessing-game/index.html" class="image featured"><img src="images/hangman.jpg" alt="" /></a>
+										<h4>Friday, 19 December,2014</h4>
 									</article>
 							
 							</div>
