--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 							<!-- Feature -->
 								<section>
-									<a href="html5-doodle-jump/index.html" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="html5-doodle-jump/index.html" class="image featured"><img src="images/pic02.png" alt="" /></a>
 									<header>
 										<h3>Newest Post</h3>
 									</header>
